django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blog-app
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - image: docker.io/aokugel/test-django-web-app:latest
          name: blog
          command: [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
          #command: ["gunicorn", "--bind", ":8000", "--workers", "3", "mysite.wsgi:application"]
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
