django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    app: blog
spec:
  type: LoadBalancer
  selector:
    app: blog
  ports:
    - port: 8000
      targetPort: 8000
