postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  labels:
    app: postgres-db
spec:
  type: LoadBalancer
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
